# cam-fenicsx-multiphysics

./: CITATION.bib  LICENSE  README.md  pyproject.toml
CMAME-D-26-01111/: INPUT_FILES.md  README.md
CMAME-D-26-01111/gpu_benchmark/: README.md
CMAME-D-26-01111/gpu_benchmark/code/: Felder_ele_bench.py  PA6_tvp.csv  README.md  TVPkinIFT_heat.py  gen_table.py  plot_bars.py  plot_composite.py  response_profiling_summary.md  run_benchmark.py
CMAME-D-26-01111/noniso_dogbone/: ADTVPkin.py  PA6_shen.csv  README.md  dogbone_bak.msh  shen_dog.py
CMAME-D-26-01111/single_element/: PA6_tvp.csv  PS.py  README.md  TVPkinIFT_heat.py  run_single_element.py  run_single_element_extract.py
Multiphysics/: Simulation.py  __init__.py
Multiphysics/Functions/: NonIsothermalEnergy.py  __init__.py
Multiphysics/Kernels/: AuxKernels.py  Base.py  ConstantScalerVariable.py  HeatConduction.py  README.md  TotalLagrangianStressDivergence.py  __init__.py
Multiphysics/Materials/: ExoMaterial.py  ExoMaterialIFT.py  Parameters.py  README.md  __init__.py
Multiphysics/Postprocessors/: CustomPostprocessor.py  Extractor.py  HistvarAtNode.py  PlasticStrain.py  Postprocessor.py  __init__.py
Multiphysics/SimulationManagers/: AuxSolverManager.py  BCBuilder.py  CutbackStrategies.py  FailureReport.py  SimulationIO.py  TimeSteppers.py
Multiphysics/tiliuTools/: LoadStepper.py  data.py  fenicsx.py  math.py  modules_setup.py
fox/: __init__.py  log.py  mesh.py  path.py  utils.py
postprocessing/: README.md  error_metrics.py  plot_curve_comparison.py
