[project]
name = "cam-fenicsx"
version = "0.1.0"
description = "FEniCSx/JAX multiphysics package accompanying the CMAME thermomechanical article"
readme = "README.md"
authors = [
    { name = "Tiansheng Liu", email = "tiliu@uni-wuppertal.de" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fox","Multiphysics"]
